// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Modal Default 1`] = `
.c6 {
  margin-bottom: 8px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c10 {
  stroke: #6E6E69;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 500;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
  cursor: pointer;
  position: absolute;
  top: 20px;
  right: 20px;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  padding-bottom: 8px;
  padding-right: 28px;
  min-height: 20px;
}

.c5 {
  overflow-y: auto;
  overflow-x: hidden;
}

.c0 {
  background-image: linear-gradient(#00D200,#FF1900);
  position: absolute;
  right: 0;
  top: 0;
  width: 20px;
  height: 200vh;
}

@media (min-width:760px) {
  .c4 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c1 {
    background-color: rgba(110,110,105,0.63);
  }
}

@media (min-width:760px) {
  .c5 {
    max-height: 50vh;
  }
}

<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="c0"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="c1 c2"
        >
          <div>
            <div
              className="c3"
            >
              <h2
                className="c4"
                id="3val-ModalTitle"
                type="title2"
              >
                Dialog information
              </h2>
            </div>
            <div
              className="c5"
            >
              <div
                className="c6"
              >
                <p
                  className="c7"
                  type="primary"
                >
                  Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
                </p>
              </div>
              <div
                className="c6"
              >
                <p
                  className="c7"
                  type="primary"
                >
                  That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
                </p>
              </div>
              <div
                className="c6"
              >
                <p
                  className="c7"
                  type="primary"
                >
                  Nielsen/Norman has an excellent article about their usage here
                </p>
              </div>
              <p
                className="c7"
                type="primary"
              >
                <a
                  href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
                >
                  https:// www.nngroup.com/articles/modal-nonmodal-dialog/
                </a>
              </p>
            </div>
            <button
              className="c8"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="false"
                className="c9"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="c10"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this dialog
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;

exports[`Storyshots Molecules | Modal Hide Close button 1`] = `
.c6 {
  margin-bottom: 8px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 500;
}

.c3 {
  padding-bottom: 8px;
  padding-right: 28px;
  min-height: 20px;
}

.c5 {
  overflow-y: auto;
  overflow-x: hidden;
}

.c0 {
  background-image: linear-gradient(#00D200,#FF1900);
  position: absolute;
  right: 0;
  top: 0;
  width: 20px;
  height: 200vh;
}

@media (min-width:760px) {
  .c4 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c1 {
    background-color: rgba(110,110,105,0.63);
  }
}

@media (min-width:760px) {
  .c5 {
    max-height: 50vh;
  }
}

<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="c0"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="c1 c2"
        >
          <div>
            <div
              className="c3"
            >
              <h2
                className="c4"
                id="11val-ModalTitle"
                type="title2"
              >
                Dialog information
              </h2>
            </div>
            <div
              className="c5"
            >
              <div
                className="c6"
              >
                <p
                  className="c7"
                  type="primary"
                >
                  The close button in the upper right corner is now hidden because the prop hideClose is true.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;

exports[`Storyshots Molecules | Modal Integration: Modal with a footer and Button 1`] = `
.c6 {
  margin-bottom: 8px;
}

.c8 {
  margin: -1px;
  padding: 1px;
  padding-top: 16px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c13 {
  stroke: #6E6E69;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c9,
.c9[type='button'],
.c9[type='reset'],
.c9[type='submit'] {
  -webkit-appearance: button;
}

.c9::-moz-focus-inner,
.c9[type='button']::-moz-focus-inner,
.c9[type='reset']::-moz-focus-inner,
.c9[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:-moz-focusring,
.c9[type='button']:-moz-focusring,
.c9[type='reset']:-moz-focusring,
.c9[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c9:hover {
  background-color: hsl(223.5,100%,45%);
}

.c9:active {
  background-color: hsl(223.5,100%,40%);
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 500;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
  cursor: pointer;
  position: absolute;
  top: 20px;
  right: 20px;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  padding-bottom: 8px;
  padding-right: 28px;
  min-height: 20px;
}

.c5 {
  overflow-y: auto;
  overflow-x: hidden;
}

.c0 {
  background-image: linear-gradient(#00D200,#FF1900);
  position: absolute;
  right: 0;
  top: 0;
  width: 20px;
  height: 200vh;
}

@media (min-width:760px) {
  .c4 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c1 {
    background-color: rgba(110,110,105,0.63);
  }
}

@media (min-width:760px) {
  .c5 {
    max-height: 50vh;
  }
}

<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="c0"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="c1 c2"
        >
          <div>
            <div
              className="c3"
            >
              <h2
                className="c4"
                id="5val-ModalTitle"
                type="title2"
              >
                Dialog information
              </h2>
            </div>
            <div
              className="c5"
            >
              <div
                className="c6"
              >
                <p
                  className="c7"
                  type="primary"
                >
                  Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
                </p>
              </div>
              <div
                className="c6"
              >
                <p
                  className="c7"
                  type="primary"
                >
                  That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
                </p>
              </div>
              <div
                className="c6"
              >
                <p
                  className="c7"
                  type="primary"
                >
                  Nielsen/Norman has an excellent article about their usage here
                </p>
              </div>
              <p
                className="c7"
                type="primary"
              >
                <a
                  href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
                >
                  https:// www.nngroup.com/articles/modal-nonmodal-dialog/
                </a>
              </p>
            </div>
            <div
              className="c8"
            >
              <div>
                <p
                  className="c7"
                  type="primary"
                >
                  This is a footer which is a ReactNode, which could e.g. contain a button or only text
                </p>
                <button
                  className="c9"
                  onClick={[Function]}
                  type="button"
                >
                  <span>
                    <span
                      className="c10"
                    >
                      Button
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <button
              className="c11"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="false"
                className="c12"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="c13"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this dialog
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;

exports[`Storyshots Molecules | Modal Uncontrolled behavior 1`] = `
.c6 {
  margin-bottom: 8px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c10 {
  stroke: #6E6E69;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 500;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
  cursor: pointer;
  position: absolute;
  top: 20px;
  right: 20px;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  padding-bottom: 8px;
  padding-right: 28px;
  min-height: 20px;
}

.c5 {
  overflow-y: auto;
  overflow-x: hidden;
}

.c0 {
  background-image: linear-gradient(#00D200,#FF1900);
  position: absolute;
  right: 0;
  top: 0;
  width: 20px;
  height: 200vh;
}

@media (min-width:760px) {
  .c4 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c1 {
    background-color: rgba(110,110,105,0.63);
  }
}

@media (min-width:760px) {
  .c5 {
    max-height: 50vh;
  }
}

<div>
  <div
    className="c0"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="c1 c2"
        >
          <div>
            <div
              className="c3"
            >
              <h2
                className="c4"
                id="9val-ModalTitle"
                type="title2"
              >
                Dialog information
              </h2>
            </div>
            <div
              className="c5"
            >
              <div
                className="c6"
              >
                <p
                  className="c7"
                  type="primary"
                >
                  Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
                </p>
              </div>
              <div
                className="c6"
              >
                <p
                  className="c7"
                  type="primary"
                >
                  That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
                </p>
              </div>
              <div
                className="c6"
              >
                <p
                  className="c7"
                  type="primary"
                >
                  Nielsen/Norman has an excellent article about their usage here
                </p>
              </div>
              <p
                className="c7"
                type="primary"
              >
                <a
                  href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
                >
                  https:// www.nngroup.com/articles/modal-nonmodal-dialog/
                </a>
              </p>
            </div>
            <button
              className="c8"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="false"
                className="c9"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="c10"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this dialog
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;

exports[`Storyshots Molecules | Modal Without header 1`] = `
.c4 {
  margin-bottom: 8px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c8 {
  stroke: #6E6E69;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 500;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
  cursor: pointer;
  position: absolute;
  top: 20px;
  right: 20px;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  overflow-y: auto;
  overflow-x: hidden;
}

.c0 {
  background-image: linear-gradient(#00D200,#FF1900);
  position: absolute;
  right: 0;
  top: 0;
  width: 20px;
  height: 200vh;
}

@media (min-width:760px) {
  .c1 {
    background-color: rgba(110,110,105,0.63);
  }
}

@media (min-width:760px) {
  .c3 {
    max-height: 50vh;
  }
}

<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="c0"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="c1 c2"
        >
          <div>
            <div
              className="c3"
            >
              <div
                className="c4"
              >
                <p
                  className="c5"
                  type="primary"
                >
                  Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
                </p>
              </div>
              <div
                className="c4"
              >
                <p
                  className="c5"
                  type="primary"
                >
                  That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
                </p>
              </div>
              <div
                className="c4"
              >
                <p
                  className="c5"
                  type="primary"
                >
                  Nielsen/Norman has an excellent article about their usage here
                </p>
              </div>
              <p
                className="c5"
                type="primary"
              >
                <a
                  href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
                >
                  https:// www.nngroup.com/articles/modal-nonmodal-dialog/
                </a>
              </p>
            </div>
            <button
              className="c6"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="false"
                className="c7"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="c8"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this dialog
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;
